target/debug/build/alvr_server-72cca23adabe7b9b/out/bindings.rs

extern "C" {
    pub fn SetTracking(
        targetTimestampNs: ::std::os::raw::c_ulonglong,
        controllerPoseTimeOffsetS: f32,
        deviceMotions: *const FfiDeviceMotion,
        motionsCount: ::std::os::raw::c_int,
        leftHand: *const FfiHandSkeleton,
        rightHand: *const FfiHandSkeleton,
        controllersTracked: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn VideoErrorReportReceive();
}
extern "C" {
    pub fn ShutdownSteamvr();
}
extern "C" {
    pub fn SetOpenvrProperty(deviceID: ::std::os::raw::c_ulonglong, prop: FfiOpenvrProperty);
}
extern "C" {
    pub fn SetChaperone(areaWidth: f32, areaHeight: f32);
}
extern "C" {
    pub fn SetViewsConfig(config: FfiViewsConfig);
}
extern "C" {
    pub fn SetBattery(deviceID: ::std::os::raw::c_ulonglong, gauge_value: f32, is_plugged: bool);
}
extern "C" {
    pub fn SetButton(path: ::std::os::raw::c_ulonglong, value: FfiButtonValue);
}
extern "C" {
    pub fn CaptureFrame();
}
extern "C" {
    #[link_name = "\u{1}?ParseFrameNals@@YAXHPEAEH_K_N@Z"]
    pub fn ParseFrameNals(
        codec: ::std::os::raw::c_int,
        buf: *mut ::std::os::raw::c_uchar,
        len: ::std::os::raw::c_int,
        targetTimestampNs: ::std::os::raw::c_ulonglong,
        isIdr: bool,
    );
}
extern "C" {
    #[link_name = "\u{1}?NalParseClose@@YAXXZ"]
    pub fn NalParseClose();
}
